--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,68 +1,73 @@
 <!doctype html>
 <html>
+
 <head>
-    <title>21 Savage Fan Site</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+  <title>Menu Creation</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Didact+Gothic&family=Mirza:wght@400;500;600;700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<div class="container">
+  <div class="container">
 
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Profile Page</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+      <img src="/img/menucreation.png">
+      <!-- <h1>Lets create your Menu</h1> -->
+      <a href="/logout" class="btnLogOut btn-default btn-sm">Logout</a>
     </div>
 
     <div class="row">
 
-        <!-- LOCAL INFORMATION -->
-        <div class="col-sm-6">
-            <div class="well">
-                <h3><span class="fa fa-user"></span> Local</h3>
+    </div>
+    <div class="col-sm-6">
+      <h2 class="intro">Lets add food</h2>
+      <form action="/menuitems" method="POST">
+        <input type="text" name="food" placeholder="Food name" required>
+        <input type="text" name="description" placeholder="Description" required>
+        <input type="text" name="price" placeholder="Price" required>
+        <button type="submit">Add</button>
+      </form>
+    </div>
 
-                <% if (user.local.email) { %>
-                    <p>
-                        <strong>id</strong>: <%= user._id %><br>
-                        <strong>email</strong>: <%= user.local.email %><br>
-                        <strong>password</strong>: <%= user.local.password %>
-                    </p>
-
-                    <a href="/unlink/local" class="btn btn-default">Unlink</a>
-                <% } else { %>
-                    <a href="/connect/local" class="btn btn-default">Connect Local</a>
-                <% } %>
-
-            </div>
-        </div>
-        <div class="col-sm-6">
-          <h3>Messages</h3>
-          <ul class="messages">
-          <% for(var i=0; i<messages.length; i++) {%>
-            <li class="message">
-              <span><%= messages[i].name %></span>
-              <span><%= messages[i].msg %></span>
-              <span><%= messages[i].thumbUp %></span>
-              <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-              <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-              <span><i class="fa fa-trash" aria-hidden="true"></i></span>
+    <div class="menu-container">
+      <div class="intro">
+        <h3 class="profileMenu">Menu Items</h3>
+      </div>
+      <% if (menuitems && menuitems.length > 0) { %>
+        <ul class="menuitems">
+          <% for (let i = 0; i < menuitems.length; i++) { %>
+            <li class="menuList">
+              <strong class="big">Name:</strong> <span class="food"><%= menuitems[i].food %></span>
+              <strong class="big">Description:</strong> <span class="description"><%= menuitems[i].description %></span>
+              <strong class="big">Price:</strong> <span class="price"><%= menuitems[i].price %></span>
+              <span>
+                <i 
+                  class="fa fa-pencil" 
+                  data-food="<%= menuitems[i].food %>" 
+                  data-description="<%= menuitems[i].description %>" 
+                  data-price="<%= menuitems[i].price %>" 
+                  aria-hidden="true"></i>
+              </span>
+              <span>
+                <i 
+                  class="fa fa-trash-o" 
+                  data-food="<%= menuitems[i].food %>" 
+                  aria-hidden="true"></i>
+              </span>
             </li>
           <% } %>
-          </ul>
+        </ul>
+      <% } %>
+    </div>
 
-          <h2>Add a message</h2>
-        <% if (user.local.email) { %>
-          <form action="/messages" method="POST">
-            <input type="text" value="<%= user.local.email %>" name="name">
-            <input type="text" placeholder="message" name="msg">
-            <button type="submit">Submit</button>
-          </form>
-        </div>
-        <% } %>
-
-</div>
-
-<script src="main.js"></script>
+  <script src="main.js"></script>
 
 </body>
+
 </html>
